@@ -92,6 +92,11 @@ Noteworthy changes in release a.b
 
 * Saving a file with a '.sam.gz' suffix will write BGZF-compressed SAM format.
 
+* hts_detect_format() no longer identifies arbitrary text files as SAM.
+  Instead the first few lines are checked for @HD/etc headers or having
+  11 or more SAM-like columns.  It also identifies BED files and several
+  index formats.  (#200, PR #721)
+
 * Empty (0-length) files are no longer considered to be valid SAM files.
   Input files without any headers or records at all are usually seen in
   pipelines such as `somecmd | samtools ...` with `somecmd` aborting and
